[package]
name = "dataflow"
version = "0.1.0"
authors = ["jafioti <jafioti@gmail.com>"]
edition = "2018"
description = "Dataflow is a data processing library, primarily for machine learning."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.59"
rand = "0.8.3"
rayon = "1.5.1"
serde = { version = "1.0", features = ["derive"] }
lentrait = "0.2.3"
multiqueue = "0.3.2"
thread-control = "0.1.2"

# Tokenizers dependencies
lazy_static = "1.4"
onig = { version = "6.0", default-features = false }
regex = "1.3"
regex-syntax = "0.6"
rayon-cond = "0.2.0"
clap = "2.33"
unicode-normalization-alignments = "0.1"
unicode_categories = "0.1"
unicode-segmentation = "1.6"
indicatif = {version = "0.15", optional = true}
itertools = "0.9"
log = "0.4"
esaxx-rs = "0.1"
derive_builder = "0.9"
spm_precompiled = "0.1"

[features]
default = ["progressbar"]
progressbar = ["indicatif"]

[dev-dependencies]
criterion = "0.3"
tempfile = "3.1"
assert_approx_eq = "1.1"
