[package]
name = "dataflow"
version = "0.3.0"
authors = ["jafioti <jafioti@gmail.com>"]
edition = "2021"
description = "Dataflow is a data processing library, primarily for machine learning."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.59"
rand = "0.8.3"
#rayon = "1.5.1"
serde = { version = "1.0", features = ["derive"] }
lentrait = "0.2.3"
#multiqueue = "0.3.2"
thread-control = "0.1.2"
tokenizers = "0.11.0"
indicatif = {version = "0.15", optional = true}
itertools = "0.9"
regex = "1.5.5"

[features]
default = ["progressbar"]
progressbar = ["indicatif"]

[dev-dependencies]
#criterion = "0.3"
tempfile = "3.1"
#assert_approx_eq = "1.1"
