[package]
name = "dataflow"
version = "0.3.2"
authors = ["Joe Fioti <joe@sidekickai.co>"]
edition = "2021"
description = "Dataflow is a data processing library, primarily for machine learning."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

members = [
    "dataflow_nlp",
]

[dependencies]
rand = "0.8"
thread-control = "0.1"
itertools = "0.9"

#rayon = "1.7"
#multiqueue = "0.3"