[package]
name = "dataflow_nlp"
version = "0.1.1"
authors = ["Joe Fioti <joe@sidekickai.co>"]
edition = "2021"
description = "Dataflow is a data processing library, primarily for machine learning."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dataflow = "0.4"
tokenizers = "0.11"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1.5"
rand = "0.8"
lentrait = "0.2"
